k8s/scheduling-namespace/scheduling-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scheduling-service-ingress
  namespace: scheduling
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /scheduling
        pathType: Prefix
        backend:
          service:
            name: scheduling-service
            port:
              number: 8102
